Update desde el servidor

--- a/example_controller/views/res_partner.xml
+++ b/example_controller/views/res_partner.xml
@@ -8,6 +8,7 @@
         <field name="arch" type="xml">
             <field name="vat" position="after">
                 <field name="vendor_id" />
+                <field name="vendor_name"/>
             </field>
         </field>
     </record>
